Fixed overflow-x on mobile size

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,12 +8,20 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   margin: 0;
   padding: 0;
   font-family: Montserrat, Verdana, Geneva, Tahoma, sans-serif;
-  overflow: hidden;
   width: 100vw;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+.main-wrapper {
+  position: relative;
+  height: 100%;
+  overflow-x: hidden !important;
 }
 
 /************************************
@@ -164,15 +172,15 @@ nav {
   .newsletter {
     position: relative;
     background-color: #fff;
-    width: 80%;
+    width: 90%;
     max-width: 576px;
     margin: 0 auto;
-    padding: 1rem;
+    padding: 1rem 0.5rem;
     text-align: center;
     background-color: rgb(205, 32, 31);
     border-radius: 0.5rem;
     .newsltr-close {
-      font-size: 2rem;
+      font-size: 1.5rem;
       position: absolute;
       right: -1rem;
       top: -1rem;
@@ -206,24 +214,25 @@ nav {
     }
     input[type="email"] {
       width: 100%;
-      padding: 1rem 2rem;
       border-radius: 60px;
       border: none;
       outline: none;
       background-color: rgba(255, 255, 255, 0.2);
-      padding-right: 8rem;
+      padding: 0.7rem 1rem;
+      padding-right: 6rem;
       font-size: 1rem;
       color: $secondary-color;
     }
     input[type="email"]::placeholder {
       color: $secondary-color;
       font-family: Montserrat;
+      opacity: 0.5;
     }
     input[type="submit"] {
       position: absolute;
       top: 0;
       right: 0;
-      padding: 1rem 2rem;
+      padding: 0.7rem;
       border-radius: 60px;
       border: none;
       outline: none;
